<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screen.detailsScreen.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back_24px"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUser"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/tvName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sailec_bold"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tvUsername"
                app:layout_constraintEnd_toEndOf="@+id/ivUser"
                app:layout_constraintStart_toStartOf="@+id/ivUser"
                app:layout_constraintTop_toBottomOf="@+id/ivUser"
                tools:text="Name" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sailec_regular"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/tvBio"
                app:layout_constraintEnd_toEndOf="@+id/tvName"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="Username" />

            <TextView
                android:id="@+id/tvBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sailec_regular"
                android:textSize="14sp"
                android:layout_marginVertical="14dp"
                app:layout_constraintBottom_toTopOf="@+id/tvFollowers"
                app:layout_constraintEnd_toEndOf="@+id/tvUsername"
                app:layout_constraintStart_toStartOf="@+id/tvUsername"
                app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                tools:text="@string/bio" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sailec_medium"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/btnOpenInBrowser"
                app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBio"
                tools:text="@string/followers" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sailec_medium"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tvFollowers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/tvFollowers"
                app:layout_constraintTop_toTopOf="@+id/tvFollowers"
                tools:text="@string/following" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/llTabs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivUser" />

            <Button
                android:id="@+id/btnOpenInBrowser"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/open_browser"
                app:icon="@drawable/open_in_new_24px"
                app:iconGravity="end"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintBottom_toTopOf="@+id/llTabs"
                app:layout_constraintEnd_toStartOf="@+id/btnMore"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

            <Button
                android:id="@+id/btnMore"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/more_horiz_24px"
                app:layout_constraintWidth_percent="0.2"
                app:layout_constraintBottom_toBottomOf="@+id/btnOpenInBrowser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/btnOpenInBrowser"
                app:layout_constraintTop_toTopOf="@+id/btnOpenInBrowser" />

            <LinearLayout
                android:id="@+id/llTabs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnOpenInBrowser">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabMaxWidth="0dp"
                    app:tabMode="fixed" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/favorite"
        app:srcCompat="@drawable/favorite_24px"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>