<resources>
    <string name="app_name">Aplikasi GitHub User</string>

    <string name="searchbar_hint">Search User</string>
    <string name="not_found">No %s found</string>

    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="followers">%d Followers</string>
    <string name="following">%d Following</string>
    <string name="bio">Bio</string>

    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>

    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="title_setting_general">General</string>
    <string name="title_setting_theme">Theme</string>

    <string name="contact_email">Contact</string>
    <string name="share">Share</string>
    <string name="open_browser">Open browser</string>
    <string name="title_favorite">Favorite</string>
</resources>